<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mutia_exer5_lightsoutv2.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#134742">

        <TextView
            android:id="@+id/lightsOut_text_startpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center_horizontal"
            android:text="@string/lights_out_startpage_label"
            android:textAlignment="center"
            android:textColor="#FFEB3B"
            android:textSize="40sp"
            app:fontFamily="sans-serif-smallcaps"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:labelFor="@id/name_edit"
            android:text="@string/name_field"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/lightsOut_text_startpage"
            tools:layout_editor_absoluteX="-16dp" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_label"
            android:textColor="#605F5D"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edit" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text=""
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>